--- a/Trend-Details.html
+++ b/Trend-Details.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trends-AgrihubKe</title>
-  <link rel="icon" href="img/favicon-32x32.png" type="image/png">
+  <link rel="icon" href="./img/favicon-32x32.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <div class="logo">
-        <img src="img/Agrihub.jpg" alt="AgrihubKe" logo-image">
+        <img src="./img/Agrihub.jpg" alt="AgrihubKe" logo-image">
     </div>
     <nav>
       <ul>
-        <li><a href="AgrihubKe.html">Home</a></li>
-        <li><a href="AgrihubKe.html">About Us</a></li>
-        <li><a href="AgrihubKe.html">Gallery</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">About Us</a></li>
+        <li><a href="index.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
