--- a/Maximizing Profit.html
+++ b/Maximizing Profit.html
@@ -1,14 +1,15 @@
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Trends-AgrihubKe</title>
   <link rel="icon" href="./img/favicon-32x32.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css">
+
+
 
 </head>
 <body>
@@ -37,22 +38,43 @@
     </nav>
 </header>
 
-  <section id="contact">
-    <div class="contact-info">
-      <h3>Contact Us</h3>
-      <p><i class="fas fa-phone"></i> Telephone: +254723440442</p>
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:slimmworldtechnologies@gmail.com">slimmworldtechnologies@gmail.com</a></p>
-      <p><i class="fas fa-map-marker-alt"></i> Location: Kikuyu, Kenya</p>
+  <section id="trend-detail">
+    <div class="trend-detail-content">
+      <h1>Youth and Agriculture</h1>
+      <p class="trend-meta">Published on: August 31, 2015</p>
+    
+    </div>
+    <div class="trend-image">
+      <img src="img/moneyinnagriculture.jpg" alt="young">
+    </div>
+    <div class="trend-desription">
+      <p>
+        Kenya’s agricultural sector has the potential to absorb a significant percentage of the country’s youth, 
+        who are increasingly seeking employment opportunities. 
+        According to the Ministry of Agriculture, Livestock, and Fisheries,
+         the youth (15-34 years) account for 35% of Kenya’s population, with an unemployment rate of 67%. 
+        To address this challenge, the government has launched initiatives to promote youth involvement in agriculture.
+      </p>
+      <p>
+        National policies, especially Kenya Vision 2030, 
+        acknowledge the role of agriculture as a key economic driver and further advocate for active involvement of youth in all
+        sectors of the economy coupled with increased access to factors of production, 
+        access to markets among others. Further, on the global, continental and regional fronts,
+        the Sustainable Development Goals 2030 (SDGs) and the Africa Union own Comprehensive 
+        Agriculture Development Programme (CAADP) emphasizes the need for maximum integration of the youth in the agricultural sector.
+         However numerous challenges including insufficient financial support, inadequate technical capacity,
+        limited access to pre-established markets, and weak implementation of policies hamper 
+        maximum participation by youth in the agriculture sector, thereby calling for home grown solutions. 
+      </p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 AgrihubKe. All rights reserved.</p>
+    <p>© 2024 AgrihubKe</p>
   </footer>
-  
+  <!-- Load jQuery first -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="script.js"></script>
   
 
 </body>
