--- a/Trend-Details.html
+++ b/Trend-Details.html
@@ -32,6 +32,6 @@
     <p>© 2024 AgrihubKe</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
+<script src="./script.js"></script>
