--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 
 </body>
 </html>
-<script src="script.js"></script>
-<script     >
+<script src="./script.js"></script>
+<!-- <script     >
     $(document).ready(function(){
     // Slick slider initialization
     $('.slider').slick({
@@ -163,4 +163,4 @@
     });
 });
 
-</script>
+</script> -->
