--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 
 </head>
 <body>
@@ -16,10 +19,10 @@
     <div class="logo">
         <img src="./img/Agrihub.jpg" alt="AgrihubKe">
     </div>
-    
+
     <nav>
         <div class="menu-toggle">
-              <svg class="hamburger-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16"> 
+              <svg class="hamburger-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
 </svg>
 <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -33,7 +36,7 @@
             <li><a href="index.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        
+
     </nav>
 </header>
 
@@ -49,11 +52,10 @@
   <footer>
     <p>&copy; 2024 AgrihubKe. All rights reserved.</p>
   </footer>
-  
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="script.js"></script>
-  
+
+
+
 
 </body>
 </html>
+<script src="./script.js"></script>
