--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#trends">Trends</a></li>
                 <li><a href="#about-us">About Us</a></li>
-                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
@@ -110,20 +110,6 @@
 
     <!-- Trends Section -->
 
-      <!-- Gallery Section -->
-      <section id="gallery" class="container">
-        <h2>Gallery</h2>
-        <div class="image-gallery">
-            <img src="./img/Beans.jpg" alt="Farm 1">
-            <img src="./img/networks_mentoring.jpg" alt="Farm 2">
-            <img src="./img/whyyoungpeople.jpg" alt="Farm 3">
-            <img src="./img/young.jpg" alt="Farm 4">
-            <img src="./img/Maize Farm.jpg" alt="Farm 5">
-            <img src="./img/irrigat.jpg" alt="Farm 6">
-            <img src="./img/fighting disease.jpg" alt="Farm 7">
-
-        </div>
-    </section>
     <footer>
         <p>&copy; 2024 AgrihubKe. All Rights Reserved.</p>
     </footer>
