--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-
+<script src="https://kit.fontawesome.com/f1deb10f83.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -41,11 +38,62 @@
 </header>
 
   <section id="contact">
-    <div class="contact-info">
-      <h3>Contact Us</h3>
-      <p><i class="fas fa-phone"></i> Telephone: +254723440442</p>
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:slimmworldtechnologies@gmail.com">slimmworldtechnologies@gmail.com</a></p>
-      <p><i class="fas fa-map-marker-alt"></i> Location: Kikuyu, Kenya</p>
+    <div class="contact-container">
+        <h2 class="contact-title">Get In Touch</h2>
+        <div class="contact-wrapper">
+            <!-- Contact Info -->
+            <div class="contact-info">
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-phone ic"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Phone</h3>
+                        <p><a href="tel:+254723440442">+254 723 440 442</a></p>
+                    </div>
+                </div>
+
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-envelope ic"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Email</h3>
+                        <p><a href="mailto:slimmworldtechnologies@gmail.com">slimmworldtechnologies@gmail.com</a></p>
+                    </div>
+                </div>
+
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-map-marker-alt ic"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Location</h3>
+                        <p>Kikuyu, Kenya</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contact Form -->
+            <div class="contact-form">
+                <h3>Send us a Message</h3>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
     </div>
   </section>
 
@@ -53,9 +101,10 @@
     <p>&copy; 2024 AgrihubKe. All rights reserved.</p>
   </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="script.js"></script>
 
 
 </body>
 </html>
-<script src="./script.js"></script>
