--- a/index.html
+++ b/index.html
@@ -43,70 +43,119 @@
         </nav>
     </header>
 
-    <!-- Main Image Slider -->
-    <section id="home"  class="container">
-        <div class="slider">
-            <div><img src="./img/agriculture.jpg" alt="Farm in Kenya 1"><div class="caption">Empowering Kenyan Farmers</div></div>
-            <div><img src="./img/commercial-farming.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
-            <div><img src="./img/farm-input.jpg" alt="Farm in Kenya 3"><div class="caption">Grow More with AgrihubKe</div></div>
-            <div><img src="./img/farmsetup.jpg" alt="Farm in Kenya 4"><div class="caption">Start Your Farm Journey with Us</div></div>
-            <div><img src="./img/farmTraining.jpg" alt="Farm in Kenya 5"><div class="caption">Training for Success</div></div>
+ <!-- Main Image Slider -->
+<!-- <section id="home" class="hero-section">
+    <div class="hero-slider">
+        <div class="slider-item">
+            <img src="./img/agriculture.jpg" alt="Farm in Kenya 1">
+            <div class="slider-caption">Empowering Kenyan Farmers</div>
         </div>
-        <div class="cta-banner">
-            <p>Join the AgrihubKe community today!</p>
-            <a href="#about-us">Learn More</a>
+        <div class="slider-item">
+            <img src="./img/commercial-farming.jpg" alt="Farm in Kenya 2">
+            <div class="slider-caption">Discover the Best Time to Plant</div>
         </div>
-        <div class="home-info">
-            <h2>Welcome to AgrihubKe</h2>
-            <p>AgrihubKe is a platform designed to empower Kenyan farmers by providing them with the tools,
+        <div class="slider-item">
+            <img src="./img/farm-input.jpg" alt="Farm in Kenya 3">
+            <div class="slider-caption">Grow More with AgrihubKe</div>
+        </div>
+        <div class="slider-item">
+            <img src="./img/farmsetup.jpg" alt="Farm in Kenya 4">
+            <div class="slider-caption">Start Your Farm Journey with Us</div>
+        </div>
+        <div class="slider-item">
+            <img src="./img/farmTraining.jpg" alt="Farm in Kenya 5">
+            <div class="slider-caption">Training for Success</div>
+        </div>
+    </div>
+
+    <div class="action-banner primary">
+        <p class="banner-text">Join the AgrihubKe community today!</p>
+        <a href="#about-us" class="btn btn-primary">Learn More</a>
+    </div>
+
+    <div class="welcome-content">
+        <h2 class="section-title">Welcome to AgrihubKe</h2>
+        <div class="welcome-text">
+            <p class="text-body">AgrihubKe is a platform designed to empower Kenyan farmers by providing them with the tools,
                 knowledge, and community support they need to thrive.
                 Whether you're a beginner or an experienced farmer,
                 we offer resources on farming techniques, weather forecasts, market trends,
-                 and much more to help you succeed.</p>
+                and much more to help you succeed.</p>
 
-            <p>Our mission is to help farmers improve their productivity,
+            <p class="text-body">Our mission is to help farmers improve their productivity,
                 increase their profits,
                 and contribute to the sustainable growth of the agriculture sector in Kenya.</p>
-
-            <div class="cta-banner">
-                <p>Stay updated on the latest developments in the agricultural sector, including new farming technologies,
-                    sustainable practices, and market trends that will benefit Kenyan farmers.</p>
-                <a href="#trends">Trends</a>
-            </div>
         </div>
-    </section>
 
-    <section id="trends" class="container">
-        <h2>Latest Trends in Agriculture</h2>
-
-
-            <div class="trends-gallery">
-                <a href="Maximizing Profit.html" class="trend-item">
-                    <img src="./img/moneyinnagriculture.jpg" alt="Money in Agriculture">
-                    <div class="trend-description">Maximizing profits in farming through smart investments.</div>
-                </a>
-
-                <a href="Trend-Mentorship.html" class="trend-item">
-                    <img src="./img/networks_mentoring.jpg" alt=" Mentoring and Networking Farmers">
-                    <div class="trend-description">The importance of mentoring and networks for young farmers.</div>
-                </a>
+        <div class="action-banner secondary">
+            <p class="banner-text">Stay updated on the latest developments in the agricultural sector, including new farming technologies,
+                sustainable practices, and market trends that will benefit Kenyan farmers.</p>
+            <a href="#trends" class="btn btn-secondary">Trends</a>
+        </div>
+    </div>
+</section> -->
 
 
-                <a href="Young Farmers.html" class="trend-item">
-                    <img src="./img/whyyoungpeople.jpg" alt="Young people in Agriculture">
-                    <div class="trend-description">Why young people should consider a future in agriculture.</div>
-                </a>
-            </div>
-    </section>
+<section id="home"  class="container">
+    <div class="slider">
+        <div><img src="./img/agriculture.jpg" alt="Farm in Kenya 1"><div class="caption">Empowering Kenyan Farmers</div></div>
+        <div><img src="./img/commercial-farming.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
+        <div><img src="./img/farm-input.jpg" alt="Farm in Kenya 3"><div class="caption">Grow More with AgrihubKe</div></div>
+        <div><img src="./img/farmsetup.jpg" alt="Farm in Kenya 4"><div class="caption">Start Your Farm Journey with Us</div></div>
+        <div><img src="./img/farmTraining.jpg" alt="Farm in Kenya 5"><div class="caption">Training for Success</div></div>
+    </div>
+    <div class="cta-banner">
+        <p>Join the AgrihubKe community today!</p>
+        <a href="#about-us">Learn More</a>
+    </div>
+    <div class="home-info">
+        <h2>Welcome to AgrihubKe</h2>
+        <p>AgrihubKe is a platform designed to empower Kenyan farmers by providing them with the tools,
+            knowledge, and community support they need to thrive.
+            Whether you're a beginner or an experienced farmer,
+            we offer resources on farming techniques, weather forecasts, market trends,
+             and much more to help you succeed.</p>
 
-    <!-- About Us Section -->
-    <section id="about-us" class="container">
-        <h2>About Us</h2>
-        <p>AgrihubKe, founded in 2005, is dedicated to empowering Kenyan farmers by providing access to vital resources, expert insights, and a strong support network. Our platform equips farmers with knowledge on optimal planting times, modern farming techniques, and market opportunities.
-        </p>
-        <p>Our mission is to foster a resilient and sustainable future for smallholder farmers in rural Kenya, offering not only educational resources but also financial support. We are committed to addressing food insecurity, which is exacerbated by climate change, unpredictable rainfall, and soil degradation. Our goal is to uplift 1 million smallholder farmers from vulnerability by 2030.</p>
-<p></p>
-    </section>
+        <p>Our mission is to help farmers improve their productivity,
+            increase their profits,
+            and contribute to the sustainable growth of the agriculture sector in Kenya.</p>
+
+        <div class="cta-banner">
+            <p>Stay updated on the latest developments in the agricultural sector, including new farming technologies,
+                sustainable practices, and market trends that will benefit Kenyan farmers.</p>
+            <a href="#trends">Trends</a>
+        </div>
+    </div>
+</section>
+
+<section id="trends" class="trends-section">
+    <h2 class="section-title">Latest Trends in Agriculture</h2>
+    <div class="trends-grid">
+        <a href="Maximizing Profit.html" class="trend-card">
+            <img src="./img/moneyinnagriculture.jpg" alt="Money in Agriculture" class="trend-image">
+            <div class="trend-content">Maximizing profits in farming through smart investments.</div>
+        </a>
+
+        <a href="Trend-Mentorship.html" class="trend-card">
+            <img src="./img/networks_mentoring.jpg" alt="Mentoring and Networking Farmers" class="trend-image">
+            <div class="trend-content">The importance of mentoring and networks for young farmers.</div>
+        </a>
+
+        <a href="Young Farmers.html" class="trend-card">
+            <img src="./img/whyyoungpeople.jpg" alt="Young people in Agriculture" class="trend-image">
+            <div class="trend-content">Why young people should consider a future in agriculture.</div>
+        </a>
+    </div>
+</section>
+
+<section id="about-us" class="about-section">
+    <h2 class="section-title">About Us</h2>
+    <div class="about-content">
+        <p class="text-body">AgrihubKe, founded in 2005, is dedicated to empowering Kenyan farmers by providing access to vital resources, expert insights, and a strong support network. Our platform equips farmers with knowledge on optimal planting times, modern farming techniques, and market opportunities.</p>
+        <p class="text-body">Our mission is to foster a resilient and sustainable future for smallholder farmers in rural Kenya, offering not only educational resources but also financial support. We are committed to addressing food insecurity, which is exacerbated by climate change, unpredictable rainfall, and soil degradation. Our goal is to uplift 1 million smallholder farmers from vulnerability by 2030.</p>
+    </div>
+</section>
+
 
     <!-- Trends Section -->
 
