--- a/Trend-Mentorship.html
+++ b/Trend-Mentorship.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css">
 
-
   <!-- Load jQuery first -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+
 
 </head>
 <body>
@@ -32,7 +33,7 @@
           </div>
           <ul id="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="Trend-Details.html">Trends</a></li>
+            <li><a href="index.html">Trends</a></li>
             <li><a href="index.html">About Us</a></li>
             <li><a href="index.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -43,12 +44,12 @@
 
   <section id="trend-detail">
     <div class="trend-detail-content">
-      <h1>Mentoring and Netwoking Young Farmers</h1>
+      <h1>Youth and Agriculture</h1>
       <p class="trend-meta">Published on: August 31, 2015</p>
 
     </div>
     <div class="trend-image">
-      <img src="img/networks_mentoring.jpg" alt="young">
+      <img src="img/moneyinnagriculture.jpg" alt="young">
     </div>
     <div class="trend-desription">
       <p>
@@ -75,7 +76,6 @@
   <footer>
     <p>© 2024 AgrihubKe</p>
   </footer>
-
 
 </body>
 </html>
