--- a/Young Farmers.html
+++ b/Young Farmers.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css">
+
   <!-- Load jQuery first -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  
+
 
 
 </head>
@@ -48,7 +49,7 @@
 
     </div>
     <div class="trend-image">
-      <img src="img/whyyoungpeople.jpg" alt="young">
+      <img src="img/moneyinnagriculture.jpg" alt="young">
     </div>
     <div class="trend-desription">
       <p>
@@ -76,6 +77,6 @@
     <p>© 2024 AgrihubKe</p>
   </footer>
 
-
 </body>
 </html>
+<script src="./script.js"></script>
