--- a/Trend-Mentorship.html
+++ b/Trend-Mentorship.html
@@ -42,36 +42,40 @@
     </nav>
 </header>
 
-  <section id="trend-detail">
-    <div class="trend-detail-content">
-      <h1>Youth and Agriculture</h1>
-      <p class="trend-meta">Published on: August 31, 2015</p>
+<section class="article-section">
+    <div class="article-container">
+        <div class="article-header">
+            <h1 class="article-title">Youth and Agriculture</h1>
+            <p class="article-meta">Published on: August 31, 2015</p>
+        </div>
 
+        <div class="article-image">
+            <img src="img/moneyinnagriculture.jpg" alt="Young people in agriculture" class="featured-image">
+        </div>
+
+        <div class="article-content">
+            <p class="content-paragraph">
+                Kenya's agricultural sector has the potential to absorb a significant percentage of the country's youth,
+                who are increasingly seeking employment opportunities.
+                According to the Ministry of Agriculture, Livestock, and Fisheries,
+                the youth (15-34 years) account for 35% of Kenya's population, with an unemployment rate of 67%.
+                To address this challenge, the government has launched initiatives to promote youth involvement in agriculture.
+            </p>
+
+            <p class="content-paragraph">
+                National policies, especially Kenya Vision 2030,
+                acknowledge the role of agriculture as a key economic driver and further advocate for active involvement of youth in all
+                sectors of the economy coupled with increased access to factors of production,
+                access to markets among others. Further, on the global, continental and regional fronts,
+                the Sustainable Development Goals 2030 (SDGs) and the Africa Union own Comprehensive
+                Agriculture Development Programme (CAADP) emphasizes the need for maximum integration of the youth in the agricultural sector.
+                However numerous challenges including insufficient financial support, inadequate technical capacity,
+                limited access to pre-established markets, and weak implementation of policies hamper
+                maximum participation by youth in the agriculture sector, thereby calling for home grown solutions.
+            </p>
+        </div>
     </div>
-    <div class="trend-image">
-      <img src="img/moneyinnagriculture.jpg" alt="young">
-    </div>
-    <div class="trend-desription">
-      <p>
-        Kenya’s agricultural sector has the potential to absorb a significant percentage of the country’s youth,
-        who are increasingly seeking employment opportunities.
-        According to the Ministry of Agriculture, Livestock, and Fisheries,
-         the youth (15-34 years) account for 35% of Kenya’s population, with an unemployment rate of 67%.
-        To address this challenge, the government has launched initiatives to promote youth involvement in agriculture.
-      </p>
-      <p>
-        National policies, especially Kenya Vision 2030,
-        acknowledge the role of agriculture as a key economic driver and further advocate for active involvement of youth in all
-        sectors of the economy coupled with increased access to factors of production,
-        access to markets among others. Further, on the global, continental and regional fronts,
-        the Sustainable Development Goals 2030 (SDGs) and the Africa Union own Comprehensive
-        Agriculture Development Programme (CAADP) emphasizes the need for maximum integration of the youth in the agricultural sector.
-         However numerous challenges including insufficient financial support, inadequate technical capacity,
-        limited access to pre-established markets, and weak implementation of policies hamper
-        maximum participation by youth in the agriculture sector, thereby calling for home grown solutions.
-      </p>
-    </div>
-  </section>
+</section>
 
   <footer>
     <p>© 2024 AgrihubKe</p>
