--- a/Maximizing Profit.html
+++ b/Maximizing Profit.html
@@ -45,12 +45,12 @@
 <section class="article-section">
     <div class="article-container">
         <div class="article-header">
-            <h1 class="article-title">Youth and Agriculture</h1>
+            <h1 class="article-title">Money In Agriculture</h1>
             <p class="article-meta">Published on: August 31, 2015</p>
         </div>
 
         <div class="article-image">
-            <img src="img/moneyinnagriculture.jpg" alt="Young people in agriculture" class="featured-image">
+            <img src="img/moneyinnagriculture.jpg" alt="Money In agriculture" class="featured-image">
         </div>
 
         <div class="article-content">
