--- a/Trend-Mentorship.html
+++ b/Trend-Mentorship.html
@@ -45,7 +45,7 @@
 <section class="article-section">
     <div class="article-container">
         <div class="article-header">
-            <h1 class="article-title">Youth and Agriculture</h1>
+            <h1 class="article-title">Training And Mentorship</h1>
             <p class="article-meta">Published on: August 31, 2015</p>
         </div>
 
