--- a/Young Farmers.html
+++ b/Young Farmers.html
@@ -62,7 +62,8 @@
                Digital Innovation in Farming
               Young Kenyan agripreneurs are harnessing the power of technology to revolutionize traditional farming methods.
                From mobile applications providing instant market prices to social media marketing of agricultural products, 
-               the digital age has made farming more appealing and profitable. These tech-savvy farmers are using platforms like WhatsApp groups and Instagram to share knowledge, market produce, and build strong agricultural networks.
+               the digital age has made farming more appealing and profitable. These tech-savvy farmers are using platforms like WhatsApp groups and Instagram to share knowledge, 
+               market produce, and build strong agricultural networks.
               
                Success Stories That Inspire
               Take Sarah Mwangi, a 27-year-old graduate who started with a small greenhouse in Nakuru and now manages a successful hydroponic farming enterprise, 
@@ -72,15 +73,18 @@
 
             <p class="content-paragraph">
               Education Meets Agriculture
-              Agricultural institutions across Kenya are adapting their curricula to include digital farming techniques and agribusiness management. This blend of traditional agricultural knowledge with modern technology is creating a new breed of informed and capable young farmers.
+              Agricultural institutions across Kenya are adapting their curricula to include digital farming techniques and agribusiness management.
+               This blend of traditional agricultural knowledge with modern technology is creating a new breed of informed and capable young farmers.
             
               Financial Support and Resources
-              Through various initiatives like the Youth Enterprise Development Fund and private sector partnerships, young farmers can now access crucial funding and resources. Organizations offering support include:
+              Through various initiatives like the Youth Enterprise Development Fund and private sector partnerships, young farmers can now access crucial funding and resources.
+               Organizations offering support include:
               <ol>
-<li>Youth Enterprise Development Fund</li>
+              <li>Youth Enterprise Development Fund</li>
               <li>Kenya Climate Smart Agriculture Project</li>
               <li>AgriFin Accelerate Program</li>
               </ol>
+
               The Future is Green
               As AgrihubKe continues to support this agricultural transformation, we're seeing more youth venture into:
               <ol>
