--- a/Young Farmers.html
+++ b/Young Farmers.html
@@ -79,7 +79,7 @@
               Financial Support and Resources
               Through various initiatives like the Youth Enterprise Development Fund and private sector partnerships, young farmers can now access crucial funding and resources.
                Organizations offering support include:
-              <ol>
+              <ol class="agri-theme">
               <li>Youth Enterprise Development Fund</li>
               <li>Kenya Climate Smart Agriculture Project</li>
               <li>AgriFin Accelerate Program</li>
@@ -87,7 +87,7 @@
 
               The Future is Green
               As AgrihubKe continues to support this agricultural transformation, we're seeing more youth venture into:
-              <ol>
+              <ol class="agri-theme">
               <li>Hydroponics and vertical farming</li>
               <li>Agri-processing</li>
               <li>Digital marketing of farm produce</li>
