--- a/Trend-Mentorship.html
+++ b/Trend-Mentorship.html
@@ -55,23 +55,15 @@
 
         <div class="article-content">
             <p class="content-paragraph">
-                Kenya's agricultural sector has the potential to absorb a significant percentage of the country's youth,
-                who are increasingly seeking employment opportunities.
-                According to the Ministry of Agriculture, Livestock, and Fisheries,
-                the youth (15-34 years) account for 35% of Kenya's population, with an unemployment rate of 67%.
-                To address this challenge, the government has launched initiatives to promote youth involvement in agriculture.
+              In the heart of Kenya's agricultural landscape, AgrihubKe is pioneering a transformative approach to farming education. 
+              We believe that knowledge is the most powerful seed, capable of growing sustainable livelihoods, food security, and economic prosperity. 
+              Our training and mentoring programs are designed to nurture the potential of young farmers, agricultural enthusiasts, and rural entrepreneurs.
             </p>
 
             <p class="content-paragraph">
-                National policies, especially Kenya Vision 2030,
-                acknowledge the role of agriculture as a key economic driver and further advocate for active involvement of youth in all
-                sectors of the economy coupled with increased access to factors of production,
-                access to markets among others. Further, on the global, continental and regional fronts,
-                the Sustainable Development Goals 2030 (SDGs) and the Africa Union own Comprehensive
-                Agriculture Development Programme (CAADP) emphasizes the need for maximum integration of the youth in the agricultural sector.
-                However numerous challenges including insufficient financial support, inadequate technical capacity,
-                limited access to pre-established markets, and weak implementation of policies hamper
-                maximum participation by youth in the agriculture sector, thereby calling for home grown solutions.
+              At AgrihubKe, we understand that modern agriculture is a complex ecosystem of technology, business, 
+              and traditional farming wisdom. Our programs are crafted to bridge knowledge gaps, inspire innovation,
+               and provide practical skills that transform agricultural potential into tangible success.
             </p>
         </div>
     </div>
