--- a/Maximizing Profit.html
+++ b/Maximizing Profit.html
@@ -55,11 +55,13 @@
 
         <div class="article-content">
             <p class="content-paragraph">
-                Kenya's agricultural sector has the potential to absorb a significant percentage of the country's youth,
-                who are increasingly seeking employment opportunities.
-                According to the Ministry of Agriculture, Livestock, and Fisheries,
-                the youth (15-34 years) account for 35% of Kenya's population, with an unemployment rate of 67%.
-                To address this challenge, the government has launched initiatives to promote youth involvement in agriculture.
+              Agriculture is not just a way of life in Kenya; it's a critical economic engine with immense financial potential. 
+              As the backbone of the Kenyan economy, agriculture represents more than traditional farming—it's a dynamic landscape of financial opportunities, innovation, and economic empowerment.
+
+              The Economic Significance of Agriculture
+              Kenya's agricultural sector contributes approximately 26% of the country's GDP and employs over 40% of the total workforce. 
+              This sector is a powerful driver of economic growth, rural development, and financial stability for millions of Kenyans.
+              
             </p>
 
             <p class="content-paragraph">
