--- a/Trend-Mentorship.html
+++ b/Trend-Mentorship.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="article-image">
-            <img src="img/networks_mentoring.jpg" alt="Young people in agriculture" class="featured-image">
+            <img src="img/youth-.jpg" alt="Young people in agriculture" class="featured-image">
         </div>
 
         <div class="article-content">
