--- a/Gallery.html
+++ b/Gallery.html
@@ -32,7 +32,7 @@
             <img src="./img/Beans.jpg" alt="Farm 1">
         </div>
         <div class="gallery-item">
-            <img src="./img/networks_mentoring.jpg" alt="Farm 2">
+            <img src="./img/young.jpg" alt="Farm 2">
         </div>
         <div class="gallery-item">
             <img src="./img/whyyoungpeople.jpg" alt="Farm 3">
