--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
 <section id="home"  class="container">
     <div class="slider">
-        <div><img src="./img/mother.jpg" alt="Farm in Kenya 1"><div class="caption">Empowering Kenyan Farmers</div></div>
-        <div><img src="./img/Beans.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
+        <div><img src="./img/tomat.jfif" alt="Farm in Kenya 1"><div class="caption">Empowering Kenyan Farmers</div></div>
+        <div><img src="./img/young.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
         <div><img src="./img/Tulip.jpg" alt="Farm in Kenya 3"><div class="caption">Grow More with AgrihubKe</div></div>
-        <div><img src="./img/Potato Farming.jpg" alt="Farm in Kenya 4"><div class="caption">Start Your Farm Journey with Us</div></div>
-        <div><img src="./img/youthh.jpg" alt="Farm in Kenya 5"><div class="caption">Training for Success</div></div>
+        <div><img src="./img/villages.jfif" alt="Farm in Kenya 4"><div class="caption">Start Your Farm Journey with Us</div></div>
+        <div><img src="./img/whyyoungpeople.jpg" alt="Farm in Kenya 5"><div class="caption">Training for Success</div></div>
     </div>
     <div class="cta-banner">
         <p>Join the AgrihubKe community today!</p>
@@ -137,7 +137,7 @@
         </a>
 
         <a href="Trend-Mentorship.html" class="trend-card">
-            <img src="./img/young.jpg" alt="Mentoring and Networking Farmers" class="trend-image">
+            <img src="./img/young farmers.jfif" alt="Mentoring and Networking Farmers" class="trend-image">
             <div class="trend-content">The importance of mentoring and networks for young farmers.</div>
         </a>
 
