--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <section id="home"  class="container">
     <div class="slider">
         <div><img src="./img/tomat.jfif" alt="Farm in Kenya 1"><div class="caption">Empowering Kenyan Farmers</div></div>
-        <div><img src="./img/young.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
+        <div><img src="./img/irrigat.jpg" alt="Farm in Kenya 2"><div class="caption">Discover the Best Time to Plant</div></div>
         <div><img src="./img/Tulip.jpg" alt="Farm in Kenya 3"><div class="caption">Grow More with AgrihubKe</div></div>
         <div><img src="./img/villages.jfif" alt="Farm in Kenya 4"><div class="caption">Start Your Farm Journey with Us</div></div>
         <div><img src="./img/whyyoungpeople.jpg" alt="Farm in Kenya 5"><div class="caption">Training for Success</div></div>
