--- a/Gallery.html
+++ b/Gallery.html
@@ -15,6 +15,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Trends</a></li>
         <li><a href="index.html">About Us</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
